# cmakes

./: CMakeLists.txt  CMakePresets.json  test.sh
cpp/include/bar/: bar.h
cpp/src/: bar.cpp  foo.cpp
